--- a/src/sass/internals.scss
+++ b/src/sass/internals.scss
@@ -28,19 +28,31 @@
             padding: to-rem($F12);
         }
 
-        &-item {
-            width: 100%;
-            height: auto;
+        figure {
+            position: relative;
+            display: inline-block;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .render-placeholder {
             display: block;
             position: relative;
-            margin: 0 auto;
+            height: auto;
+            max-width: 100%;
+        }
+
+        .render-media {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
             object-fit: cover;
 
             @include layout-1024() {
                 border-radius: to-rem($F7);
-                max-width: 100%;
-                max-height: 100vh;
-                width: auto;
             }
         }
     }
@@ -187,13 +199,10 @@
                 }
             }
 
-            video, img {
+            .render-placeholder {
+                position: relative;
                 width: calc(90vw - #{to-rem($F8 * 2)});
                 height: calc(70vh - #{to-rem($F8 * 2)});
-                object-fit: cover;
-                object-position: top center;
-                border-radius: to-rem($F2);
-                border: 1px solid rgba(255, 255 , 255, .15);
 
                 @include layout-768() {
                     width: calc(90vw - #{to-rem($F9 * 2)});
@@ -201,14 +210,12 @@
                 }
 
                 @include layout-1024() {
-                    border: none;
-                    border-radius: to-rem($F6);
                     width: to-rem($F13);
                     height: to-rem($F14);
                 }
 
                 @include layout-1440() {
-                    border-radius: to-rem($F7);
+                    
                     width: to-rem($F14);
                     height: to-rem($F15);
                 }
@@ -219,15 +226,31 @@
                 }
             }
 
-            &.landscape {
-                video, img {
-                    object-fit: scale-down;
-                    object-position: center;
+            .render-media {
+                top: 0;
+                left: 0;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: top center;
+                border-radius: to-rem($F2);
+                border: 1px solid rgba(255, 255 , 255, .15);
 
+                @include layout-1024() {
+                    border: none;
+                    border-radius: to-rem($F6);
+                }
+
+                @include layout-1440() {
+                    border-radius: to-rem($F7);
+                }
+            }
+
+            &.landscape {
+                .render-placeholder {
                     @include layout-1024() {
                         width: auto;
-                        object-fit: cover;
-                        object-position: center;
                         max-width: calc(100vw - #{to-rem($F10)});
                     }
 
@@ -241,6 +264,16 @@
 
                     @include layout-1920() {
                         max-width: calc(100vw - #{to-rem($F13)})
+                    }
+                }
+
+                .render-media {
+                    object-fit: scale-down;
+                    object-position: center;
+
+                    @include layout-1024() {
+                        object-fit: cover;
+                        object-position: center;
                     }
                 }
             }
